--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "@storybook/react": "^5.2.6",
     "@types/zdog": "^1.1.0",
     "babel-loader": "^8.0.6",
+    "eslint": "^6.6.0",
     "less": "^3.10.3",
     "less-loader": "^5.0.0",
     "ts-loader": "^6.2.1",
