--- a/package.json
+++ b/package.json
@@ -34,6 +34,6 @@
     "ts-loader": "^6.2.1",
     "typescript": "^3.7.2",
     "webpack": "^4.41.2",
-    "wepack-cli": "^0.0.1-security"
+    "webpack-cli": "^3.3.10"
   }
 }
